Diagrama de casos de uso e alteracoes na navbar

--- a/caso_de_uso.html
+++ b/caso_de_uso.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="Stylesheet" type="text/css" href="css/style.css">
-    <title>Prototipo</title>
+    <title>Caso de Uso</title>
 </head>
 
 <body>
@@ -22,22 +22,20 @@
             </ul>
         </div>
     </nav>
-    <div class="prototipo">
-        <img src="assets/prototipo.gif" alt="Desenvolvimento">
+    <div class="caso_de_uso">
+        <img src="assets/caso_de_uso.gif" alt="Desenvolvimento">
         <h2 class="sobre">
-            Protótipo
+            Diagrama de Casos de Uso
         </h2>
+        <div class="casoimg">
+            <img src="assets/diagrama_de_caso_de_uso.png" alt="Diagrama de Caso de uso">
+        </div>
 
         <p class="description">
             Em 1980, a WDS Engenharia foi criada, em Brasília, para investir no mercado em ascensão da capital do País. Concentrou suas primeiras atividades no mercado local dedicando-se à construção de pequenos imóveis residenciais. Sua constante expansão, consolidada
             com a abertura de filiais em São Paulo e Rio de Janeiro, transformou a WDS Engenharia em uma das mais importantes construtoras do País. Sua performance no setor atraiu a atenção de um dos maiores grupos de construção do mundo, a russa Dragunova
             Shayeva Empreendimentos e as duas uniram esforços durante quatro anos para competir no segmento de construção pesada.
         </p>
-    </div>
-
-    <div class="cod">
-        <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FO1ahZUBgsoQapLXDAqiuZu%2FWDS-ENGENHARIA%3Fnode-id%3D6%253A4%26scaling%3Dscale-down%26page-id%3D0%253A1"
-            allowfullscreen></iframe>
     </div>
 
 
