--- a/desenvolvimento.html
+++ b/desenvolvimento.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,16 +8,19 @@
     <link rel="Stylesheet" type="text/css" href="css/style.css">
     <title>Desenvolvimento</title>
 </head>
+
 <body>
-    
+
     <nav class="navbar">
         <div class="header">
             <ul>
                 <li><a href="index.html" id="lg_home">&#x1F3E0</a></li>
                 <li><a href="index.html">Sobre</a></li>
                 <li><a href="desenvolvimento.html">Desenvolvimento</a></li>
-                <li><a href="teste.html">Estratégia de testes</a></li>
+                <li><a href="estrategia.html">Estratégia de testes</a></li>
                 <li><a href="prototipo.html">Protótipo</a></li>
+                <li><a href="caso_de_uso.html">Diagrama de Casos de Uso</a></li>
+
             </ul>
         </div>
     </nav>
@@ -35,4 +39,5 @@
 
 
 </body>
+
 </html>
