--- a/estrategia.html
+++ b/estrategia.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <link rel="Stylesheet" type="text/css" href="css/style.css">
     <title>Teste</title>
 </head>
+
 <body>
     <nav class="navbar">
         <div class="header">
@@ -14,8 +16,10 @@
                 <li><a href="index.html" id="lg_home">&#x1F3E0</a></li>
                 <li><a href="index.html">Sobre</a></li>
                 <li><a href="desenvolvimento.html">Desenvolvimento</a></li>
-                <li><a href="teste.html">Estratégia de testes</a></li>
+                <li><a href="estrategia.html">Estratégia de testes</a></li>
                 <li><a href="prototipo.html">Protótipo</a></li>
+                <li><a href="caso_de_uso.html">Diagrama de Casos de Uso</a></li>
+
             </ul>
         </div>
     </nav>
@@ -32,4 +36,5 @@
     </div>
 
 </body>
+
 </html>
