alterações em todas as janelas e colocando a logo altair8800

--- a/caso_de_uso.html
+++ b/caso_de_uso.html
@@ -22,6 +22,9 @@
             </ul>
         </div>
     </nav>
+    <header>
+        <div id="logo"></div>
+    </header>
     <div class="caso_de_uso">
         <img src="assets/caso_de_uso.gif" alt="Desenvolvimento">
         <h2 class="sobre">
