--- a/desenvolvimento.html
+++ b/desenvolvimento.html
@@ -24,7 +24,9 @@
             </ul>
         </div>
     </nav>
-
+    <header>
+        <div id="logo"></div>
+    </header>
     <div class="desenvolvimento">
         <img src="assets/desenvolvimento.gif" alt="Desenvolvimento">
         <h2 class="sobre">
