--- a/estrategia.html
+++ b/estrategia.html
@@ -23,6 +23,9 @@
             </ul>
         </div>
     </nav>
+    <header>
+        <div id="logo"></div>
+    </header>
     <div class="estrategia">
         <img src="assets/testes.gif" alt="testes">
         <h2 class="sobre">
