--- a/prototipo.html
+++ b/prototipo.html
@@ -22,6 +22,9 @@
             </ul>
         </div>
     </nav>
+    <header>
+        <div id="logo"></div>
+    </header>
     <div class="prototipo">
         <img src="assets/prototipo.gif" alt="Desenvolvimento">
         <h2 class="sobre">
