--- a/index.html
+++ b/index.html
@@ -40,6 +40,15 @@
             com a abertura de filiais em São Paulo e Rio de Janeiro, transformou a WDS Engenharia em uma das mais importantes construtoras do País. Sua performance no setor atraiu a atenção de um dos maiores grupos de construção do mundo, a russa Dragunova
             Shayeva Empreendimentos e as duas uniram esforços durante quatro anos para competir no segmento de construção pesada.
         </p>
+        <h3 class="sobre">
+              DESENVOLVEDORES
+        </h3>
+        <img id="logo_altair"src="assets/altair2.png" alt="engenheiro">
+        <p class="description">
+            Em 1980, a WDS Engenharia foi criada, em Brasília, para investir no mercado em ascensão da capital do País. Concentrou suas primeiras atividades no mercado local dedicando-se à construção de pequenos imóveis residenciais. Sua constante expansão, consolidada
+            com a abertura de filiais em São Paulo e Rio de Janeiro, transformou a WDS Engenharia em uma das mais importantes construtoras do País. Sua performance no setor atraiu a atenção de um dos maiores grupos de construção do mundo, a russa Dragunova
+            Shayeva Empreendimentos e as duas uniram esforços durante quatro anos para competir no segmento de construção pesada.
+        </p>
     </div>
 
 
