--- a/index.html
+++ b/index.html
@@ -15,12 +15,14 @@
     <nav class="navbar">
         <div class="header">
             <ul>
-                <li><a href="" id="lg_home">&#x1F3E0</a></li>
+                <li><a href="index.html" id="lg_home">&#x1F3E0</a></li>
                 <li><a href="index.html">Sobre</a></li>
                 <li><a href="desenvolvimento.html">Desenvolvimento</a></li>
-                <li><a href="estrategia.html">Estratégia de Teste</a></li>
+                <li><a href="estrategia.html">Estratégia de testes</a></li>
                 <li><a href="prototipo.html">Protótipo</a></li>
                 <li><a href="caso_de_uso.html">Diagrama de Casos de Uso</a></li>
+
+                <!-- <li><a href="caso_de_uso.html">Diagrama de Casos de Uso</a></li> -->
 
             </ul>
         </div>
@@ -41,15 +43,30 @@
             Shayeva Empreendimentos e as duas uniram esforços durante quatro anos para competir no segmento de construção pesada.
         </p>
         <h3 class="sobre">
-              DESENVOLVEDORES
+            DESENVOLVEDORES
         </h3>
-        <img id="logo_altair"src="assets/altair2.png" alt="engenheiro">
+        <img id="logo_altair" src="assets/altair2.png" alt="engenheiro">
         <p class="description">
-            Em 1980, a WDS Engenharia foi criada, em Brasília, para investir no mercado em ascensão da capital do País. Concentrou suas primeiras atividades no mercado local dedicando-se à construção de pequenos imóveis residenciais. Sua constante expansão, consolidada
-            com a abertura de filiais em São Paulo e Rio de Janeiro, transformou a WDS Engenharia em uma das mais importantes construtoras do País. Sua performance no setor atraiu a atenção de um dos maiores grupos de construção do mundo, a russa Dragunova
-            Shayeva Empreendimentos e as duas uniram esforços durante quatro anos para competir no segmento de construção pesada.
+
         </p>
     </div>
+
+    <footer>
+        <div class="footer-content">
+            <p>
+                Em 1980, a WDS Engenharia foi criada, em Brasília, para investir no mercado em ascensão da capital do País. Concentrou suas primeiras atividades no mercado local dedicando-se à construção de pequenos imóveis residenciais. Sua constante expansão, consolidada
+                com a abertura de filiais em São Paulo e Rio de Janeiro, transformou a WDS Engenharia em uma das mais importantes construtoras do País. Sua performance no setor atraiu a atenção de um dos maiores grupos de construção do mundo, a russa
+                Dragunova Shayeva Empreendimentos e as duas uniram esforços durante quatro anos para competir no segmento de construção pesada.
+            </p>
+            <div class="social-list">
+                <ul>
+                    <li>
+                        <a href=""><img src="assets/altair_ico2.png" alt=""></a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </footer>
 
 
 
