--- a/prototipo.html
+++ b/prototipo.html
@@ -13,8 +13,7 @@
     <nav class="navbar">
         <div class="header">
             <ul>
-                <li><a href="index.html" id="lg_home">&#x1F3E0</a></li>
-                <li><a href="index.html">Sobre</a></li>
+                <li><a href="index.html">Pagina Inicial</a></li>
                 <li><a href="desenvolvimento.html">Desenvolvimento</a></li>
                 <li><a href="estrategia.html">Estratégia de testes</a></li>
                 <li><a href="prototipo.html">Protótipo</a></li>
