editado navbar e "caso_de_uso.html", faltando anexar vídeo do pitch ainda

--- a/caso_de_uso.html
+++ b/caso_de_uso.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="Stylesheet" type="text/css" href="css/style.css">
-    <title>Caso de Uso</title>
+    <title>Documentação</title>
 </head>
 
 <body>
@@ -18,7 +18,7 @@
                 <li><a href="desenvolvimento.html">Desenvolvimento</a></li>
                 <li><a href="estrategia.html">Estratégia de testes</a></li>
                 <li><a href="prototipo.html">Protótipo</a></li>
-                <li><a href="caso_de_uso.html">Diagrama de Casos de Uso</a></li>
+                <li><a href="caso_de_uso.html">Documentação</a></li>
             </ul>
         </div>
     </nav>
@@ -28,19 +28,24 @@
     <div class="caso_de_uso">
         <img src="assets/caso_de_uso.gif" alt="Desenvolvimento">
         <h2 class="sobre">
-            Diagrama de Casos de Uso
+            Lista de documentação
         </h2>
-        <div class="casoimg">
+        <!--<div class="casoimg">
             <img src="assets/diagrama_de_caso_de_uso.png" alt="Diagrama de Caso de uso">
-        </div>
-
+        </div>-->
+    </div>
+    <div class="contentdoc">
+        <ul>
+            <!--Inserir o link do pitch na linha abaixo-->
+            <li><a href="a">Apresentando em 5 minutos</a></li>
+            <li><a href="assets/diagrama_de_caso_de_uso.png" target="_blank">Diagrama de caso de uso</a></li>
+            <li><a href="assets/Requisitos.pdf" target="_blank">Requisitos funcionais e não funcionais</a></li>
+        </ul>
     </div>
     <footer>
         <div class="footer-content">
             <p>
-                Em 1980, a WDS Engenharia foi criada, em Brasília, para investir no mercado em ascensão da capital do País. Concentrou suas primeiras atividades no mercado local dedicando-se à construção de pequenos imóveis residenciais. Sua constante expansão, consolidada
-                com a abertura de filiais em São Paulo e Rio de Janeiro, transformou a WDS Engenharia em uma das mais importantes construtoras do País. Sua performance no setor atraiu a atenção de um dos maiores grupos de construção do mundo, a russa
-                Dragunova Shayeva Empreendimentos e as duas uniram esforços durante quatro anos para competir no segmento de construção pesada.
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod maxime deleniti, quasi, minus aperiam vitae consectetur aliquid provident debitis saepe illum quas quae adipisci ex tenetur mollitia quaerat ad necessitatibus!
             </p>
             <div class="social-list">
                 <ul>
