--- a/prototipo.html
+++ b/prototipo.html
@@ -17,7 +17,7 @@
                 <li><a href="desenvolvimento.html">Desenvolvimento</a></li>
                 <li><a href="estrategia.html">Estratégia de testes</a></li>
                 <li><a href="prototipo.html">Protótipo</a></li>
-                <li><a href="caso_de_uso.html">Diagrama de Casos de Uso</a></li>
+                <li><a href="caso_de_uso.html">Documentação</a></li>
             </ul>
         </div>
     </nav>
