--- a/estrategia.html
+++ b/estrategia.html
@@ -19,6 +19,7 @@
                 <li><a href="estrategia.html">Estratégia de testes</a></li>
                 <li><a href="prototipo.html">Protótipo</a></li>
                 <li><a href="caso_de_uso.html">Diagrama de Casos de Uso</a></li>
+                <li><a href="tabelas.html">Tabelas Caso de Uso</a></li>
 
             </ul>
         </div>
