--- a/tabelas.html
+++ b/tabelas.html
@@ -82,50 +82,50 @@
 
             <div class="mySlides">
                 <div class="numbertext">1 / 10</div>
-                <img src="/assets/ref1.png" style="width:100%">
+                <img src="assets/ref1.png" style="width:100%">
             </div>
 
             <div class="mySlides">
                 <div class="numbertext">2 / 10</div>
-                <img src="/assets/ref2.png" style="width:100%">
+                <img src="assets/ref2.png" style="width:100%">
             </div>
 
             <div class="mySlides">
                 <div class="numbertext">3 / 10</div>
-                <img src="/assets/ref3.png" style="width:100%">
+                <img src="assets/ref3.png" style="width:100%">
             </div>
 
             <div class="mySlides">
                 <div class="numbertext">4 / 10</div>
-                <img src="/assets/ref4.png" style="width:100%">
+                <img src="assets/ref4.png" style="width:100%">
             </div>
             <div class="mySlides">
                 <div class="numbertext">5 / 10</div>
-                <img src="/assets/ref5.png" style="width:100%">
+                <img src="assets/ref5.png" style="width:100%">
             </div>
 
             <div class="mySlides">
                 <div class="numbertext">6 / 10</div>
-                <img src="/assets/ref6.png" style="width:100%">
+                <img src="assets/ref6.png" style="width:100%">
             </div>
 
             <div class="mySlides">
                 <div class="numbertext">7 / 10</div>
-                <img src="/assets/ref7.png" style="width:100%">
+                <img src="assets/ref7.png" style="width:100%">
             </div>
 
             <div class="mySlides">
                 <div class="numbertext">8 / 10</div>
-                <img src="/assets/ref8.png" style="width:100%">
+                <img src="assets/ref8.png" style="width:100%">
             </div>
             <div class="mySlides">
                 <div class="numbertext">9 / 10</div>
-                <img src="/assets/ref9.png" style="width:100%">
+                <img src="assets/ref9.png" style="width:100%">
             </div>
 
             <div class="mySlides">
                 <div class="numbertext">10 / 10</div>
-                <img src="/assets/ref10.png" style="width:100%">
+                <img src="assets/ref10.png" style="width:100%">
             </div>
 
             <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
@@ -137,34 +137,34 @@
 
 
             <div class="column">
-                <img class="demo cursor" src="/assets/ref1.png" style="width:100%" onclick="currentSlide(1)" alt="[RF 001] Entrar no sistema">
+                <img class="demo cursor" src="assets/ref1.png" style="width:100%" onclick="currentSlide(1)" alt="[RF 001] Entrar no sistema">
             </div>
             <div class="column">
-                <img class="demo cursor" src="/assets/ref2.png" style="width:100%" onclick="currentSlide(2)" alt="[RF 002] Cadastro">
+                <img class="demo cursor" src="assets/ref2.png" style="width:100%" onclick="currentSlide(2)" alt="[RF 002] Cadastro">
             </div>
             <div class="column">
-                <img class="demo cursor" src="/assets/ref3.png" style="width:100%" onclick="currentSlide(3)" alt="[RF 003] Verificação">
+                <img class="demo cursor" src="assets/ref3.png" style="width:100%" onclick="currentSlide(3)" alt="[RF 003] Verificação">
             </div>
             <div class="column">
-                <img class="demo cursor" src="/assets/ref4.png" style="width:100%" onclick="currentSlide(4)" alt="[RF 004] Utilização do Sistema">
+                <img class="demo cursor" src="assets/ref4.png" style="width:100%" onclick="currentSlide(4)" alt="[RF 004] Utilização do Sistema">
             </div>
             <div class="column">
-                <img class="demo cursor" src="/assets/ref5.png" style="width:100%" onclick="currentSlide(5)" alt="[RF 005] Consulta ">
+                <img class="demo cursor" src="assets/ref5.png" style="width:100%" onclick="currentSlide(5)" alt="[RF 005] Consulta ">
             </div>
             <div class="column">
-                <img class="demo cursor" src="/assets/ref6.png" style="width:100%" onclick="currentSlide(6)" alt="[RF 006] Hora Extra">
+                <img class="demo cursor" src="assets/ref6.png" style="width:100%" onclick="currentSlide(6)" alt="[RF 006] Hora Extra">
             </div>
             <div class="column">
-                <img class="demo cursor" src="/assets/ref7.png" style="width:100%" onclick="currentSlide(7)" alt="[RF 007] Contracheque">
+                <img class="demo cursor" src="assets/ref7.png" style="width:100%" onclick="currentSlide(7)" alt="[RF 007] Contracheque">
             </div>
             <div class="column">
-                <img class="demo cursor" src="/assets/ref8.png" style="width:100%" onclick="currentSlide(8)" alt="[RF 008] Envio de Dados">
+                <img class="demo cursor" src="assets/ref8.png" style="width:100%" onclick="currentSlide(8)" alt="[RF 008] Envio de Dados">
             </div>
             <div class="column">
-                <img class="demo cursor" src="/assets/ref9.png" style="width:100%" onclick="currentSlide(9)" alt="[RF 009] Relatório para o Empregador">
+                <img class="demo cursor" src="assets/ref9.png" style="width:100%" onclick="currentSlide(9)" alt="[RF 009] Relatório para o Empregador">
             </div>
             <div class="column">
-                <img class="demo cursor" src="/assets/ref10.png" style="width:100%" onclick="currentSlide(10)" alt="[RF 010] Irregularidades">
+                <img class="demo cursor" src="assets/ref10.png" style="width:100%" onclick="currentSlide(10)" alt="[RF 010] Irregularidades">
             </div>
         </div>
     </div>
@@ -185,7 +185,7 @@
     </footer>
 
 </body>
-<script type="text/javascript" src="/script.js"></script>
+<script type="text/javascript" src="./script.js"></script>
 
 
 </html>
