--- a/caso_de_uso.html
+++ b/caso_de_uso.html
@@ -47,7 +47,7 @@
     <footer>
         <div class="footer-content">
             <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod maxime deleniti, quasi, minus aperiam vitae consectetur aliquid provident debitis saepe illum quas quae adipisci ex tenetur mollitia quaerat ad necessitatibus!
+                Site desenvolvido por:
             </p>
             <div class="social-list">
                 <ul>
@@ -58,9 +58,5 @@
             </div>
         </div>
     </footer>
-
-
-
 </body>
-
 </html>
