--- a/estrategia.html
+++ b/estrategia.html
@@ -34,9 +34,7 @@
     <footer>
         <div class="footer-content">
             <p>
-                Em 1980, a WDS Engenharia foi criada, em Brasília, para investir no mercado em ascensão da capital do País. Concentrou suas primeiras atividades no mercado local dedicando-se à construção de pequenos imóveis residenciais. Sua constante expansão, consolidada
-                com a abertura de filiais em São Paulo e Rio de Janeiro, transformou a WDS Engenharia em uma das mais importantes construtoras do País. Sua performance no setor atraiu a atenção de um dos maiores grupos de construção do mundo, a russa
-                Dragunova Shayeva Empreendimentos e as duas uniram esforços durante quatro anos para competir no segmento de construção pesada.
+                Site desenvolvido por:
             </p>
             <div class="social-list">
                 <ul>
@@ -47,7 +45,5 @@
             </div>
         </div>
     </footer>
-
 </body>
-
 </html>
