--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <footer>
         <div class="footer-content">
             <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Placeat numquam molestiae asperiores voluptate odit corporis? Rem reiciendis porro reprehenderit consectetur? Facere doloremque dignissimos provident quo ex culpa non earum corporis!
+                Site desenvolvido por:
             </p>
             <div class="social-list">
                 <ul>
@@ -62,9 +62,5 @@
             </div>
         </div>
     </footer>
-
-
-
 </body>
-
 </html>
