--- a/tabelas.html
+++ b/tabelas.html
@@ -171,7 +171,7 @@
     <footer>
         <div class="footer-content">
             <p>
-                Em 1980, a WDS Engenharia foi criada, em Brasília, para investir no mercado em ascensão da capital do País.
+                Site desenvolvido por:
             </p>
             <div class="social-list">
                 <ul>
