--- a/caso_de_uso.html
+++ b/caso_de_uso.html
@@ -19,6 +19,7 @@
                 <li><a href="estrategia.html">Estratégia de testes</a></li>
                 <li><a href="prototipo.html">Protótipo</a></li>
                 <li><a href="caso_de_uso.html">Documentação</a></li>
+                <li><a href="pitch.html">Pitch</a></li>
             </ul>
         </div>
     </nav>
@@ -37,15 +38,17 @@
     <div class="contentdoc">
         <ul>
             <!--Inserir o link do pitch na linha abaixo-->
-            <li><a href="a">Apresentando em 5 minutos</a></li>
-            <li><a href="assets/diagrama_de_caso_de_uso.png" target="_blank">Diagrama de caso de uso</a></li>
-            <li><a href="assets/Requisitos.pdf" target="_blank">Requisitos funcionais e não funcionais</a></li>
+            <li><a href="pitch.html">Apresentando em 5 minutos (Pitch)</a></li>
+            <li><a href="assets/diagrama_de_caso_de_uso.png" target="_blank">Diagrama de Caso de Uso</a></li>
+            <li><a href="assets/Requisitos.pdf" target="_blank">Documento de Requisitos</a></li>
         </ul>
     </div>
     <footer>
         <div class="footer-content">
             <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod maxime deleniti, quasi, minus aperiam vitae consectetur aliquid provident debitis saepe illum quas quae adipisci ex tenetur mollitia quaerat ad necessitatibus!
+                Em 1980, a WDS Engenharia foi criada, em Brasília, para investir no mercado em ascensão da capital do País. Concentrou suas primeiras atividades no mercado local dedicando-se à construção de pequenos imóveis residenciais. Sua constante expansão, consolidada
+                com a abertura de filiais em São Paulo e Rio de Janeiro, transformou a WDS Engenharia em uma das mais importantes construtoras do País. Sua performance no setor atraiu a atenção de um dos maiores grupos de construção do mundo, a russa
+                Dragunova Shayeva Empreendimentos e as duas uniram esforços durante quatro anos para competir no segmento de construção pesada.
             </p>
             <div class="social-list">
                 <ul>
