--- a/desenvolvimento.html
+++ b/desenvolvimento.html
@@ -19,6 +19,7 @@
                 <li><a href="estrategia.html">Estratégia de testes</a></li>
                 <li><a href="prototipo.html">Protótipo</a></li>
                 <li><a href="caso_de_uso.html">Documentação</a></li>
+                <li><a href="pitch.html">Pitch</a></li>
 
             </ul>
         </div>
