--- a/pitch.html
+++ b/pitch.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,6 +10,7 @@
     <title>Altair 8800</title>
     <title>Document</title>
 </head>
+
 <body>
     <nav class="navbar">
         <div class="header">
@@ -19,13 +21,11 @@
                 <li><a href="prototipo.html">Protótipo</a></li>
                 <li><a href="caso_de_uso.html">Documentação</a></li>
                 <li><a href="pitch.html">Pitch</a></li>
-
-                <!-- <li><a href="caso_de_uso.html">Diagrama de Casos de Uso</a></li> -->
-
+                <li><a href="tabelas.html">Tabelas Caso de Uso</a></li>
             </ul>
         </div>
     </nav>
-    
+
     <div class="videopai">
         <div class="video">
             <video width="890" height="500" controls>
@@ -36,9 +36,7 @@
     <footer>
         <div class="footer-content">
             <p>
-                Em 1980, a WDS Engenharia foi criada, em Brasília, para investir no mercado em ascensão da capital do País. Concentrou suas primeiras atividades no mercado local dedicando-se à construção de pequenos imóveis residenciais. Sua constante expansão, consolidada
-                com a abertura de filiais em São Paulo e Rio de Janeiro, transformou a WDS Engenharia em uma das mais importantes construtoras do País. Sua performance no setor atraiu a atenção de um dos maiores grupos de construção do mundo, a russa
-                Dragunova Shayeva Empreendimentos e as duas uniram esforços durante quatro anos para competir no segmento de construção pesada.
+                Site desenvolvido por:
             </p>
             <div class="social-list">
                 <ul>
@@ -49,7 +47,6 @@
             </div>
         </div>
     </footer>
-            
-
 </body>
+
 </html>
