Correcao footer documentacao e alteracao na img da homepage

--- a/casosdeuso.html
+++ b/casosdeuso.html
@@ -29,29 +29,35 @@
     <header>
         <div id="logo"></div>
     </header>
-
-    <div class="videopai">
-        <div class="video">
-            <video width="890" height="500" controls>
-                <source src="assets/pitch.mov" type="video/mp4">
-              </video>
-        </div>
+    <div class="caso_de_uso">
+        <img src="assets/caso_de_uso.gif" alt="Desenvolvimento">
+        <h2 class="sobre">
+            Lista de documentação
+        </h2>
+    </div>
+    <div class="contentdoc">
+        <ul>
+            <li><a href="pitch.html">Apresentando em 5 minutos (Pitch)</a></li>
+            <li><a href="assets/diagrama_de_caso_de_uso.png" target="_blank">Diagrama de Caso de Uso</a></li>
+            <li><a href="assets/Requisitos.pdf" target="_blank">Documento de Requisitos</a></li>
+        </ul>
     </div>
 
-    <footer>
-        <div class="footer-content">
-            <p>
-                Site desenvolvido por:
-            </p>
-            <div class="social-list">
-                <ul>
-                    <li>
-                        <a href=""><img src="assets/altair_ico2.png" alt=""></a>
-                    </li>
-                </ul>
+    <body>
+        <footer id="footer">
+            <div class="footer-contents">
+                <p>
+                    Site desenvolvido por:
+                </p>
+                <div class="social-list">
+                    <ul>
+                        <li>
+                            <a href=""><img src="assets/altair_ico2.png" alt=""></a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-        </div>
-    </footer>
-</body>
+        </footer>
+    </body>
 
 </html>
