--- a/desenvolvimento.html
+++ b/desenvolvimento.html
@@ -33,13 +33,17 @@
             Método de desenvolvimento
         </h2>
         <p class="description">
-            Ao observar a grande variedade de processos e modelos de desenvolvimento de software, perpassando pela evolução que tais processos e modelos tiveram, consideramos que o melhor método e, portanto, mais recomendado para ser aplicado no atual projeto do aplicativo APPONTUAL é o método do MODELO EM ESPIRAL.<br>
-	        O modelo de desenvolvimento em CASCATA de Pressman foi rapidamente descartado para este projeto por sua rigidez e grande dependência nas fases de desenvolvimento, isto é, a etapa seguinte só é iniciada após a conclusão da anterior, o que geraria um engessamento no desenrolar da criação do aplicativo, pois este sempre se mostrou mais dinâmico que o modelo proposto.<br>
-	        Partimos então para a análise da próxima evolução em termos de desenvolvimento que seria o modelo da PROTOTIPAGEM, mas foi observado que nosso cliente não apresentava uma parte de um conjunto de requisitos já definidos, ou seja, o cliente sabia o que queria e quais as suas necessidades em relação ao software desejado. Desse modo, partimos desse pressuposto e iniciamos o desenvolvimento do aplicativo, sem necessariamente a criação de um protótipo rápido de demonstração.<br>
-	        Por fim, como citado anteriormente, visualizamos como a melhor forma de desenvolvimento do aplicativo o  modelo espiral, que por ser evolucionário e também incremental, pode ser entregue por etapas, em partes ou módulos, que vão sendo integrados ao aplicativo na medida em que as entregas ocorrem. Em outras palavras, esse modelo é baseado em loops e não em uma sequência linear, como no modelo cascata e por essa razão, também é iterativo, com cada loop representando uma iteração e assim sendo mais ágil e flexível (permitindo mudanças durante o processo de criação) para o desenvolvimento do projeto, “casando” corretamente com a proposta do APPONTUAL.
+            Ao observar a grande variedade de processos e modelos de desenvolvimento de software, perpassando pela evolução que tais processos e modelos tiveram, consideramos que o melhor método e, portanto, mais recomendado para ser aplicado no atual projeto do
+            aplicativo APPONTUAL é o método do MODELO EM ESPIRAL.<br> O modelo de desenvolvimento em CASCATA de Pressman foi rapidamente descartado para este projeto por sua rigidez e grande dependência nas fases de desenvolvimento, isto é,
+            a etapa seguinte só é iniciada após a conclusão da anterior, o que geraria um engessamento no desenrolar da criação do aplicativo, pois este sempre se mostrou mais dinâmico que o modelo proposto.<br> Partimos então para a análise da próxima
+            evolução em termos de desenvolvimento que seria o modelo da PROTOTIPAGEM, mas foi observado que nosso cliente não apresentava uma parte de um conjunto de requisitos já definidos, ou seja, o cliente sabia o que queria e quais as suas necessidades
+            em relação ao software desejado. Desse modo, partimos desse pressuposto e iniciamos o desenvolvimento do aplicativo, sem necessariamente a criação de um protótipo rápido de demonstração.<br> Por fim, como citado anteriormente, visualizamos
+            como a melhor forma de desenvolvimento do aplicativo o modelo espiral, que por ser evolucionário e também incremental, pode ser entregue por etapas, em partes ou módulos, que vão sendo integrados ao aplicativo na medida em que as entregas
+            ocorrem. Em outras palavras, esse modelo é baseado em loops e não em uma sequência linear, como no modelo cascata e por essa razão, também é iterativo, com cada loop representando uma iteração e assim sendo mais ágil e flexível (permitindo
+            mudanças durante o processo de criação) para o desenvolvimento do projeto, “casando” corretamente com a proposta do APPONTUAL.
         </p>
-        <img src="assets/metodo_desenvolvimento.png" alt="">
-        <figure>Representação do Modelo em Espiral</figure>
+        <img id="img-dev" src="assets/metodo_desenvolvimento.png" alt="">
+        <figure id="fig-dev">Representação do Modelo em Espiral</figure>
     </div>
     <footer>
         <div class="footer-content">
@@ -56,4 +60,5 @@
         </div>
     </footer>
 </body>
+
 </html>
